Fix portfolio image overflow
change height to 'auto'

--- a/_sass/media-images.scss
+++ b/_sass/media-images.scss
@@ -3,7 +3,7 @@
 figure {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: auto;
     box-shadow: inset 0 0 $scale-10 rgba($black-00, .1);
     img {
         z-index: -2;
